Fix logo too big on iPhone 5

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@
 @import "typography";
 @import "buttons";
 @import "card";
+@import "navbar";
 
 
 // Hero header
@@ -29,15 +30,6 @@
     height: 600px;
   }
 }
-
-
-// Navigation
-
-.nav.flex-column .nav-link {
-  padding-left: 0;
-  padding-top: 0;
-}
-
 
 // Menu
 
